# Ponder

./: README.md  pyproject.toml
src/: commons.py
src/code_parser/: parser.py
src/codebase_parser/: __init__.py  ast_graph_builder.py  parser.py  personalization.py  schemas.py
src/llm/: config.py  model.py  tokenizer.py  train_gpt2.py
src/llm/codet5/: README.md  codet5.py  data_exploration.ipynb  generate.py
src/queries/: tree-sitter-python-tags.scm
tests/: test_ast_graph_builder.py
