[project]
name = "ponder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2",
    "tree-sitter-python>=0.23.5",
    "tree-sitter>=0.23.2",
    "rich>=13.9.4",
    "matplotlib>=3.10.0",
    "pydantic>=2.10.4",
]
